--- a/NFTGenerator/App.config
+++ b/NFTGenerator/App.config
@@ -3,5 +3,7 @@
   <appSettings>
     <add key="allowDuplicates" value="false" />
     <add key="fileSystemPath" value="filesystem" />
+    <add key="resultsPath" value="filesystem\results" />
+    <add key="amountToMint" value="0" />
   </appSettings>
 </configuration>
