--- a/NFTGenerator/App.config
+++ b/NFTGenerator/App.config
@@ -4,6 +4,6 @@
     <add key="allowDuplicates" value="false" />
     <add key="fileSystemPath" value="filesystem" />
     <add key="resultsPath" value="filesystem\results" />
-    <add key="amountToMint" value="0" />
+    <add key="serieAmount" value="0" />
   </appSettings>
 </configuration>
