--- a/NFTGenerator/NFTGenerator.csproj
+++ b/NFTGenerator/NFTGenerator.csproj
@@ -30,15 +30,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageReference Include="BetterHaveIt" Version="1.0.1" />
+    <PackageReference Include="HandierCli" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="GibNet">
-      <HintPath>Deps\GibNet.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
