--- a/NFTGenerator/NFTGenerator.csproj
+++ b/NFTGenerator/NFTGenerator.csproj
@@ -19,8 +19,10 @@
   <ItemGroup>
     <PackageReference Include="BetterHaveIt" Version="1.0.3" />
     <PackageReference Include="HandierCli" Version="1.0.1" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="8.5.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="nQuant" Version="1.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
