--- a/NFTGenerator/appsettings.Development.json
+++ b/NFTGenerator/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "Generation": {
-    "AllowDuplicates": true,
-    "SerieCount": 200
+    "GenerateRarities": true,
+    "AllowDuplicates": false,
+    "SerieCount": 400
   },
   "Debug": {
     "Verbse": true
