--- a/NFTGenerator/appsettings.Development.json
+++ b/NFTGenerator/appsettings.Development.json
@@ -2,9 +2,10 @@
   "Generation": {
     "GenerateRarities": true,
     "AllowDuplicates": false,
-    "SerieCount": 400
+    "SerieCount": 400,
+    "WorkersCount": 24
   },
   "Debug": {
-    "Verbse": true
+    "Verbose": true
   }
 }
