--- a/NFTGenerator/appsettings.Development.json
+++ b/NFTGenerator/appsettings.Development.json
@@ -3,7 +3,8 @@
     "GenerateRarities": true,
     "AllowDuplicates": false,
     "SerieCount": 400,
-    "WorkersCount": 24
+    "WorkersCount": 24,
+    "Filter": "VideoDegradation"
   },
   "Debug": {
     "Verbose": true
