Cleanup WebApplication host migration

--- a/NFTGenerator/appsettings.Development.json
+++ b/NFTGenerator/appsettings.Development.json
@@ -1,12 +1,9 @@
 {
   "Generation": {
-    "GenerateRarities": true,
+    "GenerateRaritiesData": true,
     "AllowDuplicates": false,
     "SerieCount": 400,
     "WorkersCount": 24,
     "Filter": "VideoDegradation"
-  },
-  "Debug": {
-    "Verbose": true
   }
 }
