polished rgbshift and fixed minor bugs

--- a/NFTGenerator/appsettings.Development.json
+++ b/NFTGenerator/appsettings.Development.json
@@ -4,6 +4,6 @@
     "AllowDuplicates": false,
     "SerieCount": 400,
     "WorkersCount": 24,
-    "Filter": "VideoDegradation"
+    "Filter": "RgbShift"
   }
 }
