implemented gen 1 filter
- polished the code
- fixed some minor bugs
- adjusted filter parameters

--- a/NFTGenerator/appsettings.Development.json
+++ b/NFTGenerator/appsettings.Development.json
@@ -2,8 +2,8 @@
   "Generation": {
     "GenerateRaritiesData": true,
     "AllowDuplicates": false,
-    "SerieCount": 400,
+    "SerieCount": 20,
     "WorkersCount": 24,
-    "Filter": "RgbShift"
+    "Filter": "VideoD_RgbShift"
   }
 }
