--- a/NFTGenerator/appsettings.Development.json
+++ b/NFTGenerator/appsettings.Development.json
@@ -2,8 +2,8 @@
   "Generation": {
     "GenerateRaritiesData": true,
     "AllowDuplicates": false,
-    "SerieCount": 400,
+    "SerieCount": 20,
     "WorkersCount": 24,
-    "Filter": "VideoDegradation"
+    "Filter": "VideoD_RgbShift"
   }
 }
